# path-tracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  color.hpp  hittable-list.hpp  hittable.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
src/: main.cpp  sphere.cpp
